# Lua-Vermelha

./: .gitignore  README.md
Gamecore/: CMakeLists.txt  build_HTML.bat  build_output.bat  run_HTML.bat  run_web.bat
Gamecore/data/Scripts/: door.lua  elder.lua  empty.lua  globals.lua  john.lua  scenes.lua  test1.lua  test2.lua  utils.lua
Gamecore/include/raylib/: Music.hpp  Sound.hpp  TextureUnmanaged.hpp  raylib.h
Gamecore/lib/: lua-static.lib
Gamecore/source/: main.cpp
Gamecore/source/Audio/: Audio.cpp  Audio.h
Gamecore/source/Game/: Assets.cpp  Assets.h  Director.cpp  Director.h  Game.cpp  Game.h
Gamecore/source/Game/Scenes/: BootState.cpp  BootState.h  Entity.cpp  Entity.h  FSM.cpp  FSM.h  GameScene.cpp  GameScene.h  InstanceBase.h  LuaInterface.h  SceneFactory.h  TestScene.cpp  TestScene.h
Gamecore/source/Game/States/: BootState.cpp  DialogState.cpp  FSM.h  IntroState.h  RoadState.cpp  TitleState.h
Gamecore/source/Graphics/: ApplicationProperties.h  Graphics.cpp  Graphics.h  PixelBuffer.h
Gamecore/source/Graphics/FX/: ThunderFlash.h
Gamecore/source/Lua/: LuaFunctions.cpp  LuaFunctions.h  LuaManager.cpp  LuaManager.h
States/: FSM.cpp  IntroState.cpp  RoadState.h  TitleState.cpp
